--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.3",
     "@google/generative-ai": "^0.24.1",
     "groq-sdk": "^0.30.0",
     "next": "15.4.7",
