--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.43.0",
     "@clerk/nextjs": "^6.31.3",
     "@google/generative-ai": "^0.24.1",
+    "framer-motion": "^12.23.12",
     "groq-sdk": "^0.30.0",
+    "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
